--- a/src/global.css
+++ b/src/global.css
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 html {
-    background-color: #d1ebff;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     color: #125488;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 
@@ -21,10 +26,22 @@ button:focus {
 } */
 
 .container {
-    background-color: #d2deeb;
     width: 100%;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.average,
+.average-item {
+    display: flex;
+    justify-content: space;
+    align-items: center;
+
+}
+
+.average-item {
+    flex-direction: column;
+    margin: 0 15px;
 }
