feat(configs.jsx): commit for configs page
Updated configs page, now it is connected with backend, ando is styled

--- a/src/components/longInput/style.css
+++ b/src/components/longInput/style.css
@@ -1,6 +1,6 @@
 textarea {
     border: none;
-    overflow: hidden;
+    /* overflow: hidden; */
     outline: none;
 
     -webkit-box-shadow: none;
