--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 
-html {
+html,
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  color: #125488;
+  color: #2670c7;
+  width: 100%;
+  min-height: 100vh;
+  height: 100%;
 }
 
 * {
